# zetamotion-comfyui

./: README.md  pyproject.toml
src/zetamotion_comfyui/: __init__.py  cuda_malloc.py  execution.py  folder_paths.py  hook_breaker_ac10a0.py  latent_preview.py  main.py  node_helpers.py  nodes.py  server.py
src/zetamotion_comfyui/app/: app_settings.py  custom_node_manager.py  frontend_management.py  model_manager.py  user_manager.py
src/zetamotion_comfyui/comfy/: cli_args.py  clip_model.py  clip_vision.py  conds.py  context_windows.py  controlnet.py  diffusers_load.py  gligen.py  hooks.py  lora.py  lora_convert.py  model_base.py  model_detection.py  model_management.py  model_patcher.py  model_sampling.py  ops.py  rmsnorm.py  sample.py  sampler_helpers.py  samplers.py  sd.py  sd1_clip.py  sdxl_clip.py  supported_models.py  utils.py
src/zetamotion_comfyui/comfy_api/: feature_flags.py  generate_api_stubs.py  util.py  version_list.py
src/zetamotion_comfyui/comfy_api_nodes/: apinode_utils.py  mapper_utils.py  nodes_bfl.py  nodes_bytedance.py  nodes_gemini.py  nodes_ideogram.py  nodes_kling.py  nodes_luma.py  nodes_minimax.py  nodes_moonvalley.py  nodes_openai.py  nodes_pika.py  nodes_pixverse.py  nodes_recraft.py  nodes_rodin.py  nodes_runway.py  nodes_stability.py  nodes_tripo.py  nodes_veo2.py  nodes_vidu.py
src/zetamotion_comfyui/comfy_execution/: caching.py  graph.py  progress.py
src/zetamotion_comfyui/comfy_extras/: nodes_ace.py  nodes_advanced_samplers.py  nodes_align_your_steps.py  nodes_apg.py  nodes_attention_multiply.py  nodes_audio.py  nodes_audio_encoder.py  nodes_camera_trajectory.py  nodes_canny.py  nodes_clip_sdxl.py  nodes_compositing.py  nodes_context_windows.py  nodes_controlnet.py  nodes_cosmos.py  nodes_custom_sampler.py  nodes_easycache.py  nodes_edit_model.py  nodes_flux.py  nodes_hidream.py  nodes_hooks.py  nodes_hunyuan.py  nodes_hunyuan3d.py  nodes_hypernetwork.py  nodes_images.py  nodes_latent.py  nodes_load_3d.py  nodes_lora_extract.py  nodes_lotus.py  nodes_lt.py  nodes_lumina2.py  nodes_mask.py  nodes_mochi.py  nodes_model_advanced.py  nodes_model_downscale.py  nodes_model_merging.py  nodes_model_merging_model_specific.py  nodes_model_patch.py  nodes_morphology.py  nodes_pag.py  nodes_perpneg.py  (+21 more)
(+147 files in other folders)
