[project]
name = "zetamotion-comfy"
version = "0.1.0"
description = "ZetaMotion wrapper around ComfyUI"
requires-python = ">=3.9"

dependencies = [
    # Torch with CUDA 12.6 wheels
    #"torch @ https://download.pytorch.org/whl/cu126/torch-2.3.0%2Bcu126-cp310-cp310-linux_x86_64.whl",
    # "#torchvision @ https://download.pytorch.org/whl/cu126/torchvision-0.18.0%2Bcu126-cp310-cp310-linux_x86_64.whl",

    # Other dependencies
    "torchsde",
    "torchaudio",
    "numpy>=1.25.0",
    "einops",
    "transformers>=4.37.2",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml",
    "Pillow",
    "scipy",
    "tqdm",
    "psutil",
    "alembic",
    "SQLAlchemy",
    "av>=14.2.0",
]

[project.optional-dependencies]
extras = [
    "kornia>=0.7.1",
    "spandrel",
    "soundfile",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
