[project]
name = "zetamotion-comfy"
version = "0.1.0"
description = "ZetaMotion wrapper around ComfyUI"
requires-python = ">=3.9"

dependencies = [
    # Your dependencies here
]

[project.optional-dependencies]
extras = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# === Include JSON files in all packages ===
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
# Include all .json files recursively in all packages
"*" = ["**/*.json"]
